# certchallenge

./: .gitignore  Deliverables.md  README.md  docker-compose.yml  flow-diagram.md  project-structure.md  projectflowchart.png:Zone.Identifier  wealthadvisor.ipynb
backend/: Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements.txt  test_api.py
backend/services/: __init__.py  context_parser.py  evaluation_service.py  pdf_processor.py  rag_service.py  wealth_advisor_service.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/settings/save-keys/: route.ts
frontend/src/components/: ChatInput.tsx  ChatInterface.tsx  LoadingSpinner.tsx  Message.tsx  Settings.tsx  SettingsModal.tsx  ToolSelector.tsx
frontend/src/hooks/: useApiKeys.ts  useChat.ts
