[project]
name = "Wealth-Advisor-Copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19", 
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0", 
    "ragas==0.2.10", 
    "pymupdf>=1.26.3",
    "numpy>=2.2.2",
    "unstructured>=0.14.8",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "tavily-python>=0.7.9",
    "yfinance>=0.2.65",
    "cohere>=5.12.0,<5.13.0", 
    "langchain-cohere==0.4.4",
]